fix(ui): change keyboard hint color in dark mode

--- a/src/app.css
+++ b/src/app.css
@@ -23,6 +23,11 @@
   --wordle-exact-color: #fff;
   --wordle-exact-background-color: #6aaa64;
   --keyboard-background-color: #d1d5da;
+  --keyboard-text-color: var(--text-color);
+  --keyboard-text-color-invert: var(--text-color-invert);
+  --keyboard-correct-color: var(--wordle-correct-color);
+  --keyboard-present-color: var(--wordle-present-color);
+  --keyboard-absent-color: var(--wordle-absent-color);
   --alert-background-color: #f7f7f7;
 }
 
@@ -42,7 +47,12 @@
   --wordle-absent-color: #787c7e;
   --wordle-exact-color: #333;
   --wordle-exact-background-color: #538d4e;
-  --keyboard-background-color: #606263;
+  --keyboard-background-color: #7a7c7e;
+  --keyboard-text-color: #f2f2f2;
+  --keyboard-text-color-invert: var(--keyboard-text-color);
+  --keyboard-correct-color: var(--wordle-correct-color);
+  --keyboard-present-color: var(--wordle-present-color);
+  --keyboard-absent-color: #484848;
   --alert-background-color: #373b46;
 }
 
